# Self-Supervised-Cel-Anime

./: README.md
anime-motion-flow/: .gitignore  README.md  explanation.md  package-lock.json  setup.ps1  setup.sh
anime-motion-flow/backend/: README.md  main.py  motion_index.json  pyproject.toml
anime-motion-flow/backend/app/: __init__.py  main.py  model.py  processor.py  visualization.py
anime-motion-flow/frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
anime-motion-flow/frontend/src/: App.tsx  index.css
