[project]
name = "anime-motion-flow-backend"
version = "0.1.0"
description = "FastAPI service for self-supervised cel-anime motion estimation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "torch",
    "torchvision",
    "opencv-python-headless",
    "numpy",
    "matplotlib",
    "python-multipart",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
